@@ -11,5 +11,6 @@ t/00-init.t
 t/floating-refs.t
 t/inc/setup.pl
 t/overrides.t
+t/zz-GtkBuilder.t
 t/zz-GtkCellLayoutIface.t
 t/zz-GtkCellRendererIface.t
