@@ -20,9 +20,10 @@ my %WriteMakefileArgs = (
   "LICENSE" => "lgpl",
   "NAME" => "Gtk3",
   "PREREQ_PM" => {
+    "Cairo::GObject" => "1.000",
     "Glib::Object::Introspection" => "0.002"
   },
-  "VERSION" => "0.004",
+  "VERSION" => "0.005",
   "test" => {
     "TESTS" => "t/*.t"
   }
