@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.004
+version = 0.005
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -15,6 +15,7 @@ copyright_year = 2011
 [PkgVersion]
 
 [Prereqs]
+Cairo::GObject = 1.000
 Glib::Object::Introspection = 0.002
 
 [NextRelease]
