@@ -1,3 +1,11 @@
+Overview of changes in Gtk3 0.005 [2012-04-22]
+==============================================
+
+* Require Cairo::GObject and load it automatically.
+* Add overrides for Gtk3::Builder and implement its connect_signals.
+* Add overrides for Gtk3::Menu::popup and popup_for_device.
+* Add some documentation about porting from Gtk2 to Gtk3.
+
 Overview of changes in Gtk3 0.004 [2012-03-18]
 ==============================================
 
